.metadata/.plugins/org.eclipse.cdt.ui/usart_DMA.build.log
17:55:32 **** Incremental Build of configuration Debug for project usart_DMA ****
make -j4 all 
arm-none-eabi-gcc "../Core/Src/usart.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_FULL_LL_DRIVER -DHSE_VALUE=8000000 -DHSE_STARTUP_TIMEOUT=100 -DLSE_STARTUP_TIMEOUT=5000 -DLSE_VALUE=32768 -DEXTERNAL_CLOCK_VALUE=8000000 -DHSI_VALUE=8000000 -DLSI_VALUE=40000 -DVDD_VALUE=3300 -DPREFETCH_ENABLE=1 -DSTM32F303x8 -DPOLLING=1 -c -I../Core/Inc -I../Drivers/STM32F3xx_HAL_Driver/Inc -I../Drivers/CMSIS/Device/ST/STM32F3xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/usart.d" -MT"Core/Src/usart.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/usart.o"
../Core/Src/usart.c:24:25: error: 'DMA_USART2_BUFFER_SIZE' undeclared here (not in a function)
   24 | uint8_t bufferUSART2dma[DMA_USART2_BUFFER_SIZE];
      |                         ^~~~~~~~~~~~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:40: Core/Src/usart.o] Error 1
"make -j4 all" terminated with exit code 2. Build might be incomplete.

17:55:32 Build Failed. 2 errors, 0 warnings. (took 857ms)

